--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
@@ -39,4 +43,52 @@
 
 .container {
   margin-top: 20px;
+}
+
+main {
+  display: block;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: cyan;
+}
+
+main > .overlay {
+  position: absolute;
+  z-index: 100;
+  background-color: black;
+  /* opacity: .5; */
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX("0%");
+}
+
+.hidden {
+  transform: translateX("100%");
+}
+
+.overlay > .workout-form {
+  background-color: antiquewhite;
+  max-width: 100%;
+  height: fit-content;
+  padding: 28px;
+}
+
+.overlay > .workout-form > .form-group {
+  width: "100%";
+}
+
+.form-group > label {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.form-group > label > input {
+  display: block;
+  width: 100%;
 }
